--- a/src/elements/picker/Picker.scss
+++ b/src/elements/picker/Picker.scss
@@ -25,7 +25,7 @@ novo-picker {
     i.bhi-search,
     i.bhi-times {
         position: absolute;
-        top: 0;
+        top: 9px;
         right: 0;
         font-size: 1.2em;
     }
